--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@ body {
 	margin-bottom: 0;
 }
 
+.row {
+	margin-top: 20px;
+}
+
 .row-1 {
 	width: 100%;
 }
 
-.row {
-	margin-left: -15px;
-	margin-right: -15px;
-}
